fish UI overall, modify recognition, start working with okta

--- a/FishManage_UI/Login/login.html
+++ b/FishManage_UI/Login/login.html
@@ -60,7 +60,16 @@
     <script type="module" src="/src/main.js"></script>
   </body>
   <div id="dropDownSelect1"></div>
-
+  <style>
+    body {
+      font-family: roboto;
+      margin: 4em;
+      color: #3d3d3d;
+      --mdc-theme-primary: #007f8b;
+      --mdc-theme-on-primary: #f1f3f4;
+      zoom: 0.8;
+    }
+  </style>
   <!--===============================================================================================-->
   <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
   <!--===============================================================================================-->
