--- a/FishManage_UI/checkout.html
+++ b/FishManage_UI/checkout.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Ornamental fish </title>
+    <title>Ornamental fish</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <!-- Font Awesome -->
@@ -40,12 +40,20 @@
             <h4>User Information</h4>
             <div id="checkout-app"></div>
           </div>
-       
         </div>
       </div>
     </section>
     <!-- End your project here-->
-
+    <style>
+      body {
+        font-family: roboto;
+        margin: 4em;
+        color: #3d3d3d;
+        --mdc-theme-primary: #007f8b;
+        --mdc-theme-on-primary: #f1f3f4;
+        zoom: 0.8;
+      }
+    </style>
     <!-- MDB -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- Custom scripts -->
