--- a/FishManage_UI/profile.html
+++ b/FishManage_UI/profile.html
@@ -20,10 +20,12 @@
   </body>
   <style>
     body {
-      margin-top: 20px;
-      color: #1a202c;
-      text-align: left;
-      background-color: #e2e8f0;
+      font-family: roboto;
+      margin: 4em;
+      color: #3d3d3d;
+      --mdc-theme-primary: #007f8b;
+      --mdc-theme-on-primary: #f1f3f4;
+      zoom: 0.8;
     }
     .main-body {
       padding: 15px;
