change structure code and remake the authen with update features

--- a/FishManage_UI/Login/ForgotPass.html
+++ b/FishManage_UI/Login/ForgotPass.html
@@ -56,9 +56,9 @@
     <!--===============================================================================================-->
   </head>
   <body>
-    <div id="forgetPassword"></div>
+    <div data-component="ForgetPass"></div>
     <script type="module" src="/src/main.js"></script>
-    <div id="dropDownSelect1"></div>
+    <div data-component="dropDownSelect1"></div>
     <style>
       body {
         font-family: roboto;
