--- a/FishManage_UI/Login/ResetPass.html
+++ b/FishManage_UI/Login/ResetPass.html
@@ -56,8 +56,7 @@
     <!--===============================================================================================-->
   </head>
   <body>
-    <div id="resetPassword"></div>
-
+    <div data-component="ResetPass"></div>
     <style>
       body {
         font-family: roboto;
