--- a/FishManage_UI/Login/login.html
+++ b/FishManage_UI/Login/login.html
@@ -56,10 +56,10 @@
     <!--===============================================================================================-->
   </head>
   <body>
-    <div id="auth-modal"></div>
+    <div data-component="AuthModal"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
-  <div id="dropDownSelect1"></div>
+  <div data-component="dropDownSelect1"></div>
   <style>
     body {
       font-family: roboto;
