--- a/FishManage_UI/profile.html
+++ b/FishManage_UI/profile.html
@@ -9,7 +9,7 @@
     <!--===============================================================================================-->
   </head>
   <body>
-    <div id="profile"></div>
+    <div data-component="Profile"></div>
 
     <link
       rel="stylesheet"
