--- a/FishManage_UI/checkout.html
+++ b/FishManage_UI/checkout.html
@@ -38,7 +38,7 @@
           </div>
           <div class="p-2">
             <h4>User Information</h4>
-            <div id="checkout-app"></div>
+            <div data-component="Checkout"></div>
           </div>
         </div>
       </div>
